# 2021-07-14-Rust-Dublin

./: Cargo.toml  README.md  docker-compose.jsonnet  docker-compose.yml  entrypoint  run  start
add/: Cargo.toml
add/src/: main.rs
calculator/: Cargo.toml
calculator/src/: main.rs
div/: Cargo.toml
div/src/: main.rs
mul/: Cargo.toml
mul/src/: main.rs
services/: Cargo.toml
services/src/: client.rs  lib.rs  server.rs
sub/: Cargo.toml
sub/src/: main.rs
tracing-batteries/: Cargo.toml
tracing-batteries/src/: lib.rs
