[package]
name = "tracing-batteries"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
opentelemetry = { version = "0.14", features = ["trace"] }
opentelemetry-jaeger = "0.13"
tracing-opentelemetry = "0.13"
tracing-subscriber = "0.2"
tracing = "0.1"
